2008-07-05  Adam Schreiber  <sadam@clemson.edu>
    
    * libcryptui/cryptui.c:
    * libcryptui/cryptui.h: Add function for consumers to launch seahorse when
    a key needs to be created.
    * libcryptui/cryptui-key-chooser.c: Fix warnings
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-key-store.c:
    * libcryptui/cryptui-key-store.h:
    * libcryptui/cryptui-key-chooser.c: Implement ToDo: replace signer drop down
    in chooser with check button when only one secret key
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-keyserver-sync.glade: Set Sync button insensitive when a
    server isn't selected.  Fixes bug #541579


2008-06-28  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-daemon.c:
	* daemon/seahorse-sharing.c:
	* daemon/Makefile.am:
	* gkr/libseahorse-gkr-c.vapi: (added)
	* gkr/Makefile.am:
	* gkr/seahorse-gkeyring-item-properties.c:
	* gkr/seahorse-gkeyring-item-properties.glade: (moved from src/)
	* gkr/seahorse-gkeyring-item.h:
	* gkr/seahorse-gkr.vala: (added)
	* gkr/seahorse-gkr-commands.vala: (added)
	* gkr/seahorse-gkr-module.h: (moved from seahorse-gkr.h)
	* gkr/seahorse-gkr-module.c: (moved from seahorse-gkr.c)
	* libcryptui/cryptui.h:
	* libseahorse/libseahorse-c.deps: (added)
	* libseahorse/libseahorse-c.vapi: (added)
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-commands.vala: (added)
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-generator.vala: (added)
	* libseahorse/seahorse-key-source.c:
	* libseahorse/seahorse-key-source.h:
	* libseahorse/seahorse-key.c:
	* libseahorse/seahorse-key.h:
	* libseahorse/seahorse-key-widget.h: (moved from src/)
	* libseahorse/seahorse-key-widget.c: (moved from src/)
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-prefs-keyrings.c:
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-progress.c:
	* libseahorse/seahorse-transfer-operation.c: