@@ -1,3 +1,13 @@
+2008-07-08  Stef Walter  <stef@memberwebs.com>
+
+	* src/Makefile.am:
+	* gkr/Makefile.am:
+	* pgp/Makefile.am:
+	* ssh/Makefile.am:
+	* libseahorse/Makefile.am:
+	* acinclude.m4: Make seahorse build more reliably on machines without 
+	a version of vala.
+
 2008-07-05  Adam Schreiber  <sadam@clemson.edu>
     
     * libcryptui/cryptui.c:
